@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX ibus-qt-1.2.0.20091217-doc.patch 506 SHA256 c3f0134f3ad8954193f5b6b5b28d90459a343aeb25a386809b5fd578e69e486c SHA512 d347bf54eaaf667465937e4f256e17c75339eae022622d69833624a796296914e76b711f580265e82f99dc167723e00f835e5ea450e202a64ffb2d9a54bcaf74 WHIRLPOOL 91e76d9c41da27c894b45a7d4b5a4084228d68a29d0a2012ead08ca35f2a1fd917f5608beea2bb840f4d6402c3029a6c6f04dff115325e7a9333ac41c390b118
 AUX ibus-qt-1.3.1-display-unset.patch 2262 SHA256 e6fdf379fba1b6ec554728a1899896983e7868feedaec04f730151fbb7bb556c SHA512 d5b1f87ec4404d68adb054782bc312265e265f73f150164eb6c2da5bfd76cc3a1668db4e7e779f86fecc0da7e81e407e6ef727ae884fc63ef464671c5fd6a832 WHIRLPOOL 69d2dddaa509b29fddd4a5cd9bf244600e7d71b74148c79b045add257738a2cf863b6eeffb53605a0b01294ec97fb028f202ee89e8fda02cb96bb591eaa15303
 AUX ibus-qt-1.3.1-gold.patch 397 SHA256 0915ad0b41094e2768baadf65f2e2d703ba26d619b1d254d90328fddf0b65edd SHA512 1ef3e983c0aaf8ac59f8cb92b8255014ae081d45dfb4a779f5adfd7116c8376eacd04f6711febaeae26219da706a4dda377ef0eeb7c5fa3cfcf3a2e2ded2ce67 WHIRLPOOL 5fd6e21797856e3cd1f8f07bfcca06c44edc71c57d48d5cc3750f8fda4e4d90e020418045807afc5708252538b587f25e3bfad79746ae71853ec32466a849fe9
 AUX ibus-qt-1.3.1-qvariant.patch 886 SHA256 b6aa90f89bd5d573b292d69d144c603c35d67883bbe4893873132bc1be9cce6f SHA512 125fb60ca82e1a74edc84f8a55c4eeced0cd595d5301ee62c6db4e9545227d75a1b3a0c0f69bb2b43029ee1b3d74a13fb0a62314a18cec6ffa25a09b41209033 WHIRLPOOL d810ec15c35f06db7e7bf345e5a9b464f991e47ef2dcabf0089882cb3d31bf8d263f1153bf50138dfbf4c5bcff3ad6f518a11552336bda2f90bc2496333fec2f
 DIST ibus-qt-1.3.1-Source.tar.gz 141488 SHA256 4079577a240c961278f7bdab11a5ad546dff414c687c60560fdbc19208b3ac85 SHA512 2cd28f8ff3fff411496ccaf9ab67ab5332b7f2d2d0d0e3460dbeb34874ed931aa56c222c3ea5ce39053577b91cd2de4ebe01152039cd6def37c366ab3065cff2 WHIRLPOOL 585ead9a02d2014f7536aa633c72e07f8ce990c768d0aa9b5bf00105166f467307fb12457c5da4c2aa0b7b5cf9656d616de7d0e344e8d02161e123368bdad9ff
-EBUILD ibus-qt-1.3.1.ebuild 1276 SHA256 38140b33c3a289b814fd859a1c79d8a18c4b9880ea921c4cd38a21f48350749d SHA512 67cb295d2d7cf5639ca603539ae02cc424efee7419e37bf5642fee136e687edb4c767b5acd1e25fdb7552dc446a2ebdb226653aa843065257f7ea64551bd6524 WHIRLPOOL de2f3f095f3a6b97e13880cd244e2934f78072da77e5b708052bd6eb7a245b30e4785960ca6b000226be7789c8306e273085c4d8e57ce8eb512660eb08fe5eaf
-MISC ChangeLog 3144 SHA256 c3b02e6ceb8e6db5e8773ad531ec0c20151fa34aa2b51eef3eb97e72235e7d7e SHA512 3442031186c4d0feaaaf0d4e04eae498839be4b681bd8aa4b3f8fc00bd0b07e4f662ce088eaf0c3c2d53b7dbf13cc1704b8a9328059a070b5e2b39634d25d84f WHIRLPOOL 86f98b3441eb9b6f0ecd02525c0bbd5a67ad340791f4350f312a4943bdd5a7e6b9f53c2b775cb497679aadf7b5b77bf6676d90b38e29946b532ff3c99469c88f
-MISC metadata.xml 486 SHA256 cb45a841b498d72b6b88788fa935c2bb195db6049398468edc28481d5b619d10 SHA512 7df6a1ab6d5d1a18e0c682fd0f84b89987a60bcd06560d4ca1b12faf2fbd132277577325e9db80eb7eb9462c33f4d823f7390e1ee7d60ff500f2f777a77c9324 WHIRLPOOL ca436f8208a6aac2788dddb7bdcd008100646b2331f9c4f21698847a8e76a6d6c48d6a595499593f080e0a972d7b683f628d247a9faa6c1f736687c85857be1d
+EBUILD ibus-qt-1.3.1.ebuild 1310 SHA256 379d92ca12cd904e91f9df5d441ae5f600695732e1811c010fb3b6de1e9dfeac SHA512 70a7548bb1461ad42ea5437a4a6845642c1e61942fa2eac0927116f94d8e803c79b695615fcf05a8efc8636f72ad8153fc1c1f8cd33d5af979eb3650800e82e6 WHIRLPOOL 07018ffdc473b38db38bf00f5da1534026dd0e5c2c30fbb89b4d91de0eca86108cbbf647939d5b57032d19f3fdfe72224642f5e467bb418652cfbad153303981
+MISC ChangeLog 3258 SHA256 0aad2192b38b7d71196a17f8ba1ab566fc19e56d2c261d3f7fa0585e363e0c2e SHA512 ae2ddab082eb3d2cde19db7bfb66bcc865bceafb28451e4691d5ed7f7cdd979d7bd2fac0dcc7e530251a61b800ab7a68a29c6e19869ce9919af56b3efb87863d WHIRLPOOL e44295a7c80bbc2e0cfeeadb1fdc2414e9be4b2377ce2e801b53ea0752d3f8b88046a52f17ca74d4e53608590fe337a5ba00c0209950e210f47d25399dbf94a2
+MISC metadata.xml 492 SHA256 b941a17d8507bbe9ab34835932fa1670e6b82a18350be9f52ed0a7ff75cd9b61 SHA512 c6520a136d1e8d82cf7c706f2bc5bebd74a43a4c34faa6629c0ef2027919d10fb65c69e3938425f742418222ff41ee89f53078e848023484652c6c47042ba109 WHIRLPOOL 344e7a0d81d4d694b16c859a0a05af95fe283d08293bb8243a36aa64d6c211beada606f02e93c1ea8895145c9b799fef6d908279ea8082ba4958affa7d310ba5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRUDPQAAoJEDYO1FT4VRUUAbUQAKQoWdQ5kixqvi6x0/MydB6w
-qiBXf+55bw7A+nQG1QmLK/r8kNc6SIfxneZ7DZqRTF72X8Nwv07r+I6vdcQr8ZoI
-27D/+cdeyltmboWrmCk3A1uYltZWkItf/RbdNV85AUogKSE0OLyJMME4oqsrUrDx
-EywJ4aYWlX9QZ5Rrqfhi6sSWaSqQCrMQpLKpfEF+dhI3sQglo4aM0lcqEGeUs6OI
-beJU6gfO0wBXXivn0T4OX3qcBoTk8wy8UjYCJoCOgVgm6/61NJz1rzXGKrsG3MnL
-XsIMEFw2k1zl97vzsGOF1KI7SbpmVtp44Jk6hUpZCwyGSLEU8mTn/bVIC2tiAuuy
-71iROURLKI10Z25IDtrrizlQSqWKzP6NzsxjfuszkfAih1Dd8DIoNMRYoe2oUv7r
-k8nSJLXYYirT7wnAPp6XcpV+/xLXJD1EMX+T52U9shQkUgAtD4sgzWOdyyk/64v+
-wRJmyFabLupxPmzolxiPDHW3j1g7M1gzmRuF2p0KrvY2AbTMS9vJtUCzEQstQXzq
-//0OMHFz8Zdf30eKvCdmz27q/5govPLRwGuHsa5LDN5ixvCTf61OzvaN63tWWDix
-BaenRN0XLEqA6ohSqDC/eJ3CMV4iJVsziRIF4ibmaGXJLjPQmBgaSqdiCOtMmdLD
-8cCe9kF35gsRTKj7s3Vm
-=qlAA
+iQIcBAEBCgAGBQJSgJHTAAoJELnU8jG9FVirwUUP/18IbWlevLqwWVvjGgWZrWnN
+oNVIGwheCazI81Z9gDrw7kPmRShSqweDLM/IOzkqBpVED+WfcOe1IDSSs5AaneC4
+2ilGEGNUxrrvhnxtdb57Cd2cGukxZrrUaXO+q3Gh4G8vBXV6+c623WKIAH3S7hii
+U0t9S/aFnQVNriN03UHUPm90b8wsvLZXztZDjFEV/KMNswraRAwC8ZrTFzuaa3oV
+1k/wNjEmXdy7XqPgZ2SnwUjO0keVQNi3qbbEi/9aTEdcVwRogV0j/EjKk/4gItw2
+Tw7MISOm3fzqJ5vOzBjm/54WIBO9YDqPL2sSc+30DFFzLeSjcT2SWvaPp4g4XYGf
+4dBpDyH2csm60IYmrnN2+8pOVsyVxzKBHXMDViZwzghVnGiik4Va5as7w+BqPs8U
+BmIlEtSqxnlrk5/+swIaiUBYBb1HcBqXUFh7MBIasSWOLwMhiMg4sGMAlpJ26Lqw
+EJ+McS3qkPac9KzL8Qo17q04ZeB5z2/qaMCJPZZcuJgcaxBw2+wLBlpquVHkJ6+P
+rLQiB2dxnt5RkNWn1wPr8ZyXGPD/CFsF00J7kb/5CS2wT2wl7whZ0G5yLPWFUAVz
+6DEfB1uXi5TqBKQET81vXa5kgHJZdN/E9lvuTMd/c63mV6GinPUqkB5HnFOLnQ+/
+7/S1wJVh0Q8QW7dM1MNg
+=EFZv
 -----END PGP SIGNATURE-----
