@@ -6,16 +6,28 @@ AUX harfbuzz-0.9.18-ldadd.patch 722 SHA256 ba662d39a7e1b704c403c76c7e40c523998cb
 DIST harfbuzz-0.9.12.tar.bz2 886353 SHA256 c653f70a275e98d109a9f1271373a6e80978c97298d723cb3f370351852f9da5 SHA512 10c0e174789e36a02e616cf922962a7c75d6f89cb378a33487b81947e16818347c888c39703c64d620eb3d29bf90cd900ae832dd573f5081eb4de25ba4737bff WHIRLPOOL 6228766b74a46482811ce0e4c85b6bd80d4c0e37aaade3c2b75b790ed1409255d481688e0def89b75a9a1df3ef10bab221dce105439a433e5b33e65ac8685c63
 DIST harfbuzz-0.9.18.tar.bz2 902395 SHA256 fef0fbbc6d6492cb4074a5e26a699d87d88bef8adc25dda62af6077735a7d908 SHA512 cf873e903b620391efbd681a01620f1719d278bf10a61a8f583abb9ba116ec494459cef1f81f137cf2dbb089c9d6a8460576ccabd46ab3f23a50e3731b427f5d WHIRLPOOL 57ecc5fdb9ed879113fac335aa3a222963183832257a58944c561e671e3d514bde462a323b776184d10b2bfe1abc9151c93cff8d9098abedcfa03415708a0fea
 DIST harfbuzz-0.9.20.tar.bz2 1030152 SHA256 83384fa03fbcf0c5d8203374bae2efef7dcac650f428d2216d8a6d2251dbbc67 SHA512 2473885cf77f2353a28779f55aa5eb323190fd5432d2bba0026a0b337986d293e8a38d7a5bd6c68e7bc3843e6ad3ed3a592d12b896fc28ff7119c67a8c7d6f45 WHIRLPOOL 0a35408913a042a3055f30b743d4e278b903254e762a6daa37f8955aa9907480b670120a6520e7b2487cfcc00959d43930c845293d8a674826fe90f8c2d3f18f
+DIST harfbuzz-0.9.23.tar.bz2 1027508 SHA256 171ab7f58e7243082a4582f4d1f21b3f44462931ea92a6909d303ad3614794c7 SHA512 b6ddc3e9401d0719757b54aa797cd3a5df58c0740998b95f4d73380cf1734d865099b95683774b393d372bd94fdece2dbee172a10242f36769dd848ec30ce558 WHIRLPOOL d6248a590ef639937483e1b67a21770dc393fbdc57c03fab2c060cea3569ad7d47f07a01854c9b565cb80d41d44e0f09d3f07fb4d81828c7eb346ddcade8196d
 EBUILD harfbuzz-0.9.12.ebuild 1686 SHA256 bb37abe8e6425b37dee64cd95e4a0e31b6ab8bf64ba0085b3cfeb422b620ce0c SHA512 9e5da3fe6be6e95a3ff5cd968e09dc13434e5e1591eee8f1ddc05552be59ce7b09a6b3d3d3d6522197be1213d86fcd3fe5894a3c3514d746297d4615227d3e3b WHIRLPOOL a36fe247b2f54dbc8b5db2c3344e042f18d7f2e52679fb94784e870cc6309e9d86e61d9f0a9ab729da82325c0bd34c274030c269013cce6daa5efb52de5c7bb9
 EBUILD harfbuzz-0.9.18-r1.ebuild 1946 SHA256 e8baab01829217a046eb369a565b601494b202fdc402322dc5b1247982a5e47c SHA512 8b16d82a5a52cceae19e6c5380d8e7c24de7a252202d7804b67cad4fbca13697e859d7b330e56a095c4c5be10ad5e3311bbe03af66c98c942b2a2224431ad971 WHIRLPOOL 2f7df3064047b4e3558b2f478bb1a17a08707e86e3e9f6a8cb52fea01a9a15f865851aa23520204019d6b299b7842d6e9ccb3b6482fdebdd17b5b6d3d1bada36
 EBUILD harfbuzz-0.9.20.ebuild 2511 SHA256 4fee6dcb63e04443818d6816fa70f9e0bbcf3a40095d104eb00d01a9ec96d1ba SHA512 1b540054ebafab4ae0a5b6e7a8721d225d2ca8dd97678cde5f52b55b5bccf7168f53b961d3357d86c84e42cb7750693e8a052feb18664cf02615d1d15992cb45 WHIRLPOOL 3db31c0e2f21588ced3789c4df9194a49f331665ddf85abf06f094e2456ec4bc4f038f63a706e3804750acfd2d128fdd4a61b2bd28f668225fb1871bdf498942
+EBUILD harfbuzz-0.9.23.ebuild 2358 SHA256 897888247aea0a7d1eb1dc508eb4846894a2e42007aa575b7073e773f1775bdc SHA512 62921db98f6430368e75b3a4255a69c4e6c1e7d3fdfa8aa8f9b2182a0b65efed6790d3a87c2e2b3b886720a6134750590a4b8aabc842ac0ccd17c8366c54fbed WHIRLPOOL a8599fb2b7c4b22001fc55fafb96deb17ed0aa7abcc73fd88b6cdf24eb312c7e8c010fca7e8cc15cf2b8fac96644155acbc6eaaf47d70ab58c51a3cc0f36447b
 EBUILD harfbuzz-9999.ebuild 2357 SHA256 ad29faafdd2bbb8692432da1a78d7f54935eab823b64387720330fe7984e3c85 SHA512 eed6758f1277ec2aa7eda37d2d80d45faa1f9ea65ab2af0ed411f87edafe066fa23ff88d811d4058884b183fde41579f17fb70f74becae5ee122bce338cc2f14 WHIRLPOOL 9f28cee353809842c654c393b57afd9f80a9a40118ba0d2861eb3ef3ecdb61cd2ff959dc3ea7225988f03702bce1c6ab75c2d763c20da27091c2c0353b54ed7a
-MISC ChangeLog 8048 SHA256 e1de083a35a06525268ee2a4b70073d8cca74528ea172fc200bb6f8dde29c43f SHA512 5281f6505291c3a685fc0517bfe6a0204810e6cae8e509ed09eb3f13e457789bb4dd0f96c73b1e1dbeb0cfe0a3ef4421a7bdf96a1fa2292e1bfc582abfe5ed43 WHIRLPOOL f25fd5853cf2b890dd647887a6cfebc5a67157d245bebe23d02ff2fe88449e5cd4e226411f5afd7ae58ea236e57abf961f7ef674df8cb99bb0aa3a4ba3c5c148
+MISC ChangeLog 8193 SHA256 9c8d65614230c88a378fb529d777e3da0deba18f29b3a024e654edc2680e4402 SHA512 5ca5a2b55905b166ac37db9ba4855730f7db44db33ce6cf5f538d24faec7a1428e0e9b0ad7669f03294c6e765ca0ffccef41937ad132a5c9db5bcb89dbea146b WHIRLPOOL c702c6946d3ad0a3f06e93deae8baa678090c9cceb84d5efadf9a45265655beeb3dcaf75fc2b57cb0ad5abbd111022a6c123cca58011ecef098c690358f941be
 MISC metadata.xml 348 SHA256 ab40ba306c3499687d57b89247a77e7e8093c88196e6c0fb2333f014ee37c3da SHA512 057542963b2698ddd474970f6b49a6b99c5ff1982c29d7495b6ea05a8bc5266007e328b6658c13052cad8cd2b1c44e2bd6d60ef3e4ef43755c6b4c785b908485 WHIRLPOOL f1799f9bedccd73989ce42f234a28222de692f147553bf4a8bdf154bb544f22ead4ade109700fea7785747d27adbcf30c5543d435f3584f43817b1ed1111b1a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJpH1EACgkQVWmRsqeSphO4bACfaHZqfLCe1R3x/M7gApJgOx0J
-MeMAnAu3nDKkFP8BGERvZjazeBp/AHeQ
-=B+ud
+iQIcBAEBCAAGBQJSgKrWAAoJEOSiRoyO7jvowXsP/0NBnw6Azm57cEAR7iWfq9f1
+PgxfS7gednHFHJWA9a4Z2ffJNXTFjoQog5YwcDoqLK9/pB/81LBRUcqkAW12ruvF
+KDEYzpWPSm6SXTOLORbqM24hpL9gShfS9jN9x+2Xwsus6IKDnvb5/IqPCYNOHYJe
+5eQaWEhD6WJm6lLhZUuY8Fs8nhqp8qM7Hx/C2KGU0dRw71GNO/OzwHvp39TvJwlc
+McmefjqxOIVSLryAUuBKOO89u2O+WLHOz5QmjjchwrqeLj3xegyww+yLgIh7MW6r
+fmvObYevMGp1A3yZ18CguUUsPlpQdBf7d65FkdA91c7hS8o5+vOdlh/jRKlxjJpy
+IXKPIi8PS+X6DHAQ/P/qWQiPJ1M8Oua37KCAmgCgyq3MEMVpV69kwkPzo5P2bt8L
+K2exNXX5H2iWR6TUvoL4G+8sh/vUOiTnCTO2KZZ+uEZ1Dcv72xWmBjzpTbNv/UgK
+Ks9sxTVH1k6miGa6RFytQ5WdQpFhLjHLalisOP0hkqPCUO2cOBq9baREa+elXFV3
+VK+1M+2M8uOEX0k8Jo5qbB7seBb38lVyuaD4ljNoQCtMRVjr42VouHeheD/Iio7b
++OulMRCEMlBne1eyfOjNs62cjf8MMgPgvm5meYbPg76GRmVRlvmEyfRADjCVzYZa
+uE0BzAA1jLo4Zy/hLy9V
+=yLkq
 -----END PGP SIGNATURE-----
