@@ -4,10 +4,10 @@ DESCRIPTION=Qt IBus library and Qt input method plugin
 EAPI=5
 HOMEPAGE=http://code.google.com/p/ibus/
 IUSE=doc
-KEYWORDS=amd64 x86
+KEYWORDS=amd64 x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=>=app-i18n/ibus-1.3.7 >=sys-apps/dbus-1.2 x11-libs/libX11 >=dev-qt/qtcore-4.5:4 >=dev-qt/qtdbus-4.5:4
 SLOT=0
 SRC_URI=http://ibus.googlecode.com/files/ibus-qt-1.3.1-Source.tar.gz
 _eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=bdea8a9cac358ef37dfab5ba24ac43f0
+_md5_=f95b3f0cc33f9de5f6d5ad38dcc7f493
