@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=cairo? ( x11-libs/cairo:= ) glib? ( dev-libs/glib:2 ) graphite? ( media-gfx/graphite2:= ) icu? ( dev-libs/icu:= ) introspection? ( >=dev-libs/gobject-introspection-1.32 ) truetype? ( media-libs/freetype:2= ) dev-util/gtk-doc-am virtual/pkgconfig || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=An OpenType text shaping engine
+EAPI=5
+HOMEPAGE=http://www.freedesktop.org/wiki/Software/HarfBuzz
+IUSE=+cairo +glib +graphite icu introspection static-libs +truetype
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~x86-macos ~x64-macos ~x64-solaris
+LICENSE=Old-MIT ISC icu
+RDEPEND=cairo? ( x11-libs/cairo:= ) glib? ( dev-libs/glib:2 ) graphite? ( media-gfx/graphite2:= ) icu? ( dev-libs/icu:= ) introspection? ( >=dev-libs/gobject-introspection-1.32 ) truetype? ( media-libs/freetype:2= )
+REQUIRED_USE=introspection? ( glib )
+SLOT=0/0.9.18
+SRC_URI=http://www.freedesktop.org/software/harfbuzz/release/harfbuzz-0.9.23.tar.bz2
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=0706564410eeac3d06679b870a997c3d
