@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/harfbuzz
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/ChangeLog,v 1.51 2013/10/24 13:23:28 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/harfbuzz/ChangeLog,v 1.52 2013/11/11 10:00:30 scarabeus Exp $
+
+*harfbuzz-0.9.23 (11 Nov 2013)
+
+  11 Nov 2013; Tomáš Chvátal <scarabeus@gentoo.org> +harfbuzz-0.9.23.ebuild:
+  Version bump to latest.
 
   24 Oct 2013; Jeroen Roovers <jer@gentoo.org> harfbuzz-0.9.20.ebuild:
   Stable for HPPA (bug #476364).
